[package]
name = "xvii"
version = "0.3.0"
authors = ["J/A <archer884@gmail.com>"]

description = """
Library for parsing or printing Roman numerals
"""

license = "MIT/Apache-2.0"
homepage = "https://github.com/archer884/xvii"
documentation = "https://docs.rs/xvii"
readme = "README.md"
keywords = ["roman", "numeral", "xvii", "seventeen"]
