[package]
name = "xvii"
# Do not forget bump the version before release. There were breaking changes.
version = "0.4.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/archer884/xvii"
documentation = "https://docs.rs/xvii"
readme = "README.md"
keywords = ["roman", "numeral", "xvii", "seventeen"]
description = """
Library for parsing or printing Roman numerals
"""

[features]
std = []

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
