[package]
name = "xvii"
version = "0.4.1"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/archer884/xvii"
documentation = "https://docs.rs/xvii"
readme = "README.md"
keywords = ["roman", "numeral", "xvii", "seventeen"]
description = """
Library for parsing or printing Roman numerals
"""

[features]
default = ["std"]
std = []

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
